[metadata]
name = gabbi
author = Chris Dent
author-email = cdent@anticdent.org
summary = Declarative HTTP testing library
description-file = README.rst
license = Apache-2
home-page = https://github.com/cdent/gabbi
python-requires = >=3.6
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Environment :: Web Environment
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Testing

[files]
packages =
    gabbi

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source

[entry_points]
console_scripts =
    gabbi-run = gabbi.runner:run
