[metadata]
name = gabbi
author = Chris Dent
author_email = cdent@anticdent.org
summary = Declarative HTTP testing library
description_file = README.rst
license = Apache-2
home_page = https://github.com/cdent/gabbi
python_requires = >=3.6
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Environment :: Web Environment
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Testing

[files]
packages =
    gabbi

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source

[entry_points]
console_scripts =
    gabbi-run = gabbi.runner:run
